--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -3,7 +3,8 @@
     title =        "Riemannsche Fl{\" a}chen",
     year =	"1977",
     publisher = "Springer-Verlag",
-    address = "Berlin"
+    address = "New York, Heidelberg, Berlin",
+    series= "Graduate Texts in Mathematics 81"
 }
  
 @book{algebraic,
@@ -21,11 +22,35 @@
     publisher = "Birkhäuser",
     address   = "Basel"
 }
-https://v2.overleaf.com/project/5b918a5cdbde433bfe0f9a05
+
 @book{funkana,
     author    = "Dirk Werner",
     title     = "Funktionalanalysis",
     year      = "2018",
     publisher = "Springer Spektrum",
     address   = "Berlin"
+
+}@book{geomTop,
+    author    = "Edwin E. Moise",
+    title     = "Geometric Topology in Dimensions 2 and 3",
+    year      = "1977",
+    publisher = "Springer-Verlag",
+    address   = "New York, Heidelberg, Berlin",
+    series= "Graduate Texts in Mathematics 47"
 }
+@book{algTop,
+    author    = "Ralph St{\" o}cker und Heiner Zieschang",
+    title     = "Algebraische Topologie",
+    note = "Eine Einf{\" u}hrung",
+    year      = "1994",
+    publisher = "B.G. Teubner",
+    address   = "Stuttgart"
+    }
+    
+    @book{algCur,
+    author    = "Rick Miranda",
+    title     = "Algebraic Curves and Riemann Surfaces",
+    series = "Graduate Studies in Mathematics Volume 5",
+    year      = "1995",
+    publisher = "American Mathematical Society",
+    }
