--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -39,9 +39,8 @@
     series= "Graduate Texts in Mathematics 47"
 }
 @book{algTop,
-    author    = "Ralph St{\" o}cker und Heiner Zieschang",
-    title     = "Algebraische Topologie",
-    note = "Eine Einf{\" u}hrung",
+    author    = "Ralph St{\" o}cker and Heiner Zieschang",
+    title     = "Algebraische Topologie- Eine Einf{\" u}hrung",
     year      = "1994",
     publisher = "B.G. Teubner",
     address   = "Stuttgart"
@@ -54,3 +53,4 @@
     year      = "1995",
     publisher = "American Mathematical Society",
     }
+  
